# nvidia-jetson-workload

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  COMPLETED.md  CONTRIBUTING.md  FUTURE_WORKLOADS.md  GPU_ADAPTABILITY.md  LICENSE  PROJECT_STATUS.md  README.md  build.sh  pyproject.toml  requirements.txt
.github/workflows/: benchmark.yml  ci.yml  deploy.yml
benchmark/: README.md  benchmark_suite.py  cost_modeling.py  visualization.py
benchmark/configs/: README.md  dgx_a100.yaml  dgx_h100.yaml  dgx_station_a100.yaml  dgx_superpod.yaml  financial_modeling.yaml  slurm_cluster_basic.yaml  slurm_cluster_custom.yaml  slurm_cluster_highend.yaml  slurm_cluster_jetson.yaml
benchmark/scripts/: run_benchmarks.sh  run_financial_benchmark.py  run_geospatial_benchmark.py
containers/: README.md  benchmark.Dockerfile  benchmark.def  nbody-sim.Dockerfile  nbody-sim.def
docs/: aws-datasets.md  gpu_adaptability_pattern.md  integration_patterns.md
docs/integrations/: geo_financial_integration.md
docs/user-guide/: README.md  benchmarking.md  cost-comparison.md  deployment.md  examples.md  release-process.md  visualization-dashboard.md
docs/user-guide/sample-configs/: dgx_custom.yaml  slurm_cluster_custom.yaml
docs/user-guide/sample-reports/: cost-comparison-sample.md  detailed-cost-analysis-example.md  interpreting-cost-results.md
scripts/: README.md  benchmark_geo_financial_jetson.sh  create_release.sh  deploy-all.sh  deploy.sh  run_geo_financial_analysis.sh  run_realtime_dashboard.sh  run_scenario_analysis.sh  setup-jetson.sh  setup-ssh-keys.sh  update_copyright.sh
slurm/nbody-sim/: nbody_job.sbatch  submit_job.py
src/geospatial/: README.md  benchmark.py
src/geospatial/benchmark/: __init__.py  datasets.py  geospatial_benchmark.py  metrics.py  visualization.py
src/geospatial/cpp/: CMakeLists.txt
src/geospatial/cpp/include/geospatial/: dem_processing.hpp  gpu_adaptability.hpp  point_cloud.hpp
src/geospatial/cpp/pybind/: CMakeLists.txt  bindings.cpp
src/geospatial/cpp/src/: dem_processing.cpp  gpu_adaptability.cpp  point_cloud.cpp
src/geospatial/cpp/src/kernels/: dem_kernels.cu  kernel_launchers.cu  point_cloud_kernels.cu
src/geospatial/cpp/test/: CMakeLists.txt  test_dem_processing.cpp  test_point_cloud.cpp
src/geospatial/cpp/test/scripts/: generate_test_data.sh
src/geospatial/integration_tests/: test_end_to_end.py
src/geospatial/python/: setup.py
src/integrations/: README.md
src/integrations/geo_financial/: README.md  __init__.py  climate_risk_assessment.py  dashboard_app.py  data_connectors.py  generate_test_data.py  geo_risk.py  geospatial_financial_analysis.ipynb  (+7 more)
src/medical-imaging/python/: CMakeLists.txt  README.md  medical_imaging_module.cpp  setup.py
src/medical-imaging/python/examples/: README.md  ct_reconstruction_example.py  gpu_benchmark.py  image_processing_example.py  image_registration_example.py
src/medical-imaging/python/medical_imaging/: __init__.py  visualization.py
src/molecular-dynamics/: README.md
src/molecular-dynamics/cpp/: CMakeLists.txt  build.sh
src/molecular-dynamics/cpp/include/molecular_dynamics/: atom.hpp  common.hpp  cuda_kernels.cuh  integrator.hpp  molecular_system.hpp  simulation.hpp
src/molecular-dynamics/cpp/src/: atom.cpp  cuda_kernels.cu  main.cpp  python_bindings.cpp
src/molecular-dynamics/cpp/test/: test_atom.cpp  test_main.cpp
src/nbody_sim/: README.md
src/nbody_sim/cpp/: CMakeLists.txt  build_and_test.sh
src/nbody_sim/cpp/include/nbody_sim/: adaptive_kernels.cuh  common.hpp  cuda_kernels.cuh  device_adaptor.hpp  integrator.hpp  particle.hpp  simulation.hpp
src/nbody_sim/cpp/src/: adaptive_kernels.cu  cuda_kernels.cu  device_adaptor.cpp  integrator.cpp  main.cpp  particle.cpp  simulation.cpp
src/nbody_sim/cpp/test/: test_integrator.cpp  test_particle.cpp  test_simulation.cpp
src/proto/: common.proto  medical.proto  nbody.proto  weather.proto
src/signal_processing/: README.md
src/signal_processing/cpp/: CMakeLists.txt  build.sh
src/signal_processing/cpp/include/signal_processing/: device_detection.h  digital_filtering.h  spectral_analysis.h  time_frequency.h  wavelet_transform.h
src/signal_processing/cpp/pybind/: CMakeLists.txt  bindings.cpp
src/signal_processing/cpp/src/: device_detection.cpp  digital_filtering.cpp  spectral_analysis.cpp  time_frequency.cpp  wavelet_transform.cpp
src/signal_processing/cpp/src/kernels/: fft_kernels.cu  filter_kernels.cu  high_perf_gpu_support.cu  time_frequency_kernels.cu  wavelet_kernels.cu
src/signal_processing/cpp/test/: CMakeLists.txt  run_benchmarks.sh  test_adaptive_filter_cuda.cpp  test_fir_filter_cuda.cpp  test_multirate_filter_cuda.cpp  test_time_frequency.cpp  test_wavelet_transform.cpp
src/signal_processing/cpp/test/scripts/: run_time_frequency_benchmark.sh
src/signal_processing/python/: CMakeLists.txt  README.md  pyproject.toml  setup.py
src/signal_processing/python/examples/: wavelet_transform_example.py
src/signal_processing/python/signal_processing/: __init__.py  _signal_processing.cpp  filters.py  spectral.py  tf_analysis.py  wavelet.py
src/signal_processing/python/tests/: __init__.py  test_filters.py  test_spectral.py  test_tf_analysis.py  test_wavelet.py
src/visualization/: package.json
src/weather-sim/: README.md
src/weather-sim/cpp/: CMakeLists.txt
src/weather-sim/cpp/examples/: weather_sim_example.cpp
src/weather-sim/cpp/include/weather_sim/: gpu_adaptability.hpp  initial_conditions.hpp  output_manager.hpp  weather_sim.hpp
src/weather-sim/cpp/pybind/: CMakeLists.txt
src/weather-sim/cpp/src/: gpu_adaptability.cpp  initial_conditions.cpp  python_bindings.cpp  weather_grid.cpp  weather_simulation.cpp
src/weather-sim/cpp/src/kernels/: shallow_water_kernels.cu
src/weather-sim/cpp/test/: CMakeLists.txt  gpu_adaptability_test.cpp  initial_conditions_test.cpp  weather_grid_test.cpp  weather_simulation_test.cpp
tests/: conftest.py
tests/benchmark/: test_cost_modeling.py
tests/integrations/: README.md  __init__.py  run_all_tests.py
workload-specs/: geospatial-analysis-spec.md
(+61 files in other folders)
